--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     "magento/module-inventory-configuration": "*",
     "magento/module-inventory-configuration-api": "*",
     "magento/module-inventory-distance-based-source-selection": "*",
+    "magento/module-inventory-distance-based-source-selection-admin-ui": "*",
+    "magento/module-inventory-distance-based-source-selection-api": "*",
     "magento/module-inventory-elasticsearch": "*",
     "magento/module-inventory-graph-ql": "*",
     "magento/module-inventory-grouped-product": "*",
