--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
     "magento/module-inventory-distance-based-source-selection": "*",
     "magento/module-inventory-distance-based-source-selection-admin-ui": "*",
     "magento/module-inventory-distance-based-source-selection-api": "*",
+    "magento/module-inventory-export-stock": "*",
+    "magento/module-inventory-export-stock-api": "*",
     "magento/module-inventory-elasticsearch": "*",
     "magento/module-inventory-graph-ql": "*",
     "magento/module-inventory-grouped-product": "*",
