--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
   "name": "yireo/magento2-replace-inventory",
   "version": "2.3.3",
   "replace": {
+    "magento/inventory-composer-installer",
+    "magento/inventory-composer-metapackage",
     "magento/module-inventory": "*",
     "magento/module-inventory-admin-ui": "*",
     "magento/module-inventory-advanced-checkout": "*",
