--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
   "name": "yireo/magento2-replace-inventory",
-  "version": "2.3.4",
+  "version": "2.3.5",
+  "require": {
+    "magento/product-community-edition": "2.3.5"
+  },
   "replace": {
     "magento/inventory-composer-installer":"*",
     "magento/inventory-composer-metapackage":"*",
