--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "yireo/magento2-replace-inventory",
   "require": {
-    "magento/product-community-edition": "2.3.2"
+    "magento/product-community-edition": "~2.3.2"
   },
   "replace": {
     "magento/module-inventory": "*",
