--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "yireo/magento2-replace-inventory",
   "require": {
-    "magento/product-community-edition": "2.3.3"
+    "magento/product-community-edition": "~2.3.3"
   },
   "replace": {
     "magento/inventory-composer-installer":"*",
