Add new packages under 2.4

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "magento/module-inventory-advanced-checkout": "*",
     "magento/module-inventory-requisition-list": "*",
     "magento/module-inventory-api": "*",
+    "magento/module-inventory-bundle-import-export": "*",
     "magento/module-inventory-bundle-product": "*",
+    "magento/module-inventory-bundle-product-indexer": "*",
     "magento/module-inventory-bundle-product-admin-ui": "*",
     "magento/module-inventory-cache": "*",
     "magento/module-inventory-catalog": "*",
@@ -35,6 +37,21 @@
     "magento/module-inventory-grouped-product-indexer": "*",
     "magento/module-inventory-import-export": "*",
     "magento/module-inventory-indexer": "*",
+    "magento/module-inventory-in-store-pickup": "*",
+    "magento/module-inventory-in-store-pickup-admin-ui": "*",
+    "magento/module-inventory-in-store-pickup-api": "*",
+    "magento/module-inventory-in-store-pickup-frontend": "*",
+    "magento/module-inventory-in-store-pickup-graph-qp": "*",
+    "magento/module-inventory-in-store-pickup-multishipping": "*",
+    "magento/module-inventory-in-store-pickup-quote": "*",
+    "magento/module-inventory-in-store-pickup-quote-graph-ql": "*",
+    "magento/module-inventory-in-store-pickup-sales": "*",
+    "magento/module-inventory-in-store-pickup-sales-admin-ui": "*",
+    "magento/module-inventory-in-store-pickup-sales-api": "*",
+    "magento/module-inventory-in-store-pickup-shipping": "*",
+    "magento/module-inventory-in-store-pickup-shipping-admin-ui": "*",
+    "magento/module-inventory-in-store-pickup-shipping-api": "*",
+    "magento/module-inventory-in-store-pickup-webapi-extension": "*",
     "magento/module-inventory-low-quantity-notification": "*",
     "magento/module-inventory-low-quantity-notification-admin-ui": "*",
     "magento/module-inventory-low-quantity-notification-api": "*",
