--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
     "magento/module-inventory-shipping-admin-ui": "*",
     "magento/module-inventory-source-deduction-api": "*",
     "magento/module-inventory-source-selection": "*",
-    "magento/module-inventory-source-selection-api": "*"
+    "magento/module-inventory-source-selection-api": "*",
+    "magento/module-inventory-visual-merchandiser": "*"
   }
 }
