--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "magento/module-inventory-catalog": "*",
     "magento/module-inventory-catalog-admin-ui": "*",
     "magento/module-inventory-catalog-api": "*",
+    "magento/module-inventory-catalog-frontend-ui": "*",
     "magento/module-inventory-catalog-search": "*",
     "magento/module-inventory-configurable-product": "*",
     "magento/module-inventory-configurable-product-admin-ui": "*",
