--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "magento/module-inventory-catalog-search": "*",
     "magento/module-inventory-configurable-product": "*",
     "magento/module-inventory-configurable-product-admin-ui": "*",
+    "magento/module-inventory-configurable-product-frontend-ui": "*",
     "magento/module-inventory-configurable-product-indexer": "*",
     "magento/module-inventory-configuration": "*",
     "magento/module-inventory-configuration-api": "*",
