--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
     "magento/module-inventory-source-selection": "*",
     "magento/module-inventory-source-selection-api": "*",
     "magento/module-inventory-swatches-frontend-ui": "*",
-    "magento/module-inventory-visual-merchandiser": "*"
+    "magento/module-inventory-visual-merchandiser": "*",
+    "magento/module-inventory-wishlist": "*"
   }
 }
