--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
     "magento/module-inventory-catalog-api": "*",
     "magento/module-inventory-catalog-frontend-ui": "*",
     "magento/module-inventory-catalog-search": "*",
+    "magento/module-inventory-catalog-search-bundle-product": "*",
+    "magento/module-inventory-catalog-search-configurable-product": "*",
     "magento/module-inventory-configurable-product": "*",
     "magento/module-inventory-configurable-product-admin-ui": "*",
     "magento/module-inventory-configurable-product-frontend-ui": "*",
@@ -58,6 +60,7 @@
     "magento/module-inventory-low-quantity-notification-admin-ui": "*",
     "magento/module-inventory-low-quantity-notification-api": "*",
     "magento/module-inventory-multi-dimensional-indexer-api": "*",
+    "magento/module-inventory-quote-graph-ql": "*",
     "magento/module-inventory-product-alert": "*",
     "magento/module-inventory-reservations": "*",
     "magento/module-inventory-reservations-api": "*",
