--- a/.github/workflows/magento-installation.yml
+++ b/.github/workflows/magento-installation.yml
@@ -30,12 +30,12 @@ jobs:
             MAGENTO_MARKETPLACE_PASSWORD: ${{ secrets.MAGENTO_MARKETPLACE_PASSWORD }}
         run: |
             mkdir -p /tmp/m2 && cd /tmp/m2
-            composer global config http-basic.repo.magento.com $MAGENTO_MARKETPLACE_USERNAME $MAGENTO_MARKETPLACE_PASSWORD
+            composer2 global config http-basic.repo.magento.com $MAGENTO_MARKETPLACE_USERNAME $MAGENTO_MARKETPLACE_PASSWORD
       - name: Creating Magento composer project
         run: |
             MAGENTO_VERSION=`cat ${GITHUB_WORKSPACE}/.github/workflows/magento_version.txt`
             test -z "$MAGENTO_VERSION" && exit 1
-            composer create-project --repository=https://repo.magento.com/ magento/project-community-edition:${MAGENTO_VERSION} /tmp/m2 --no-install --no-interaction --no-progress
+            composer2 create-project --repository=https://repo.magento.com/ magento/project-community-edition:${MAGENTO_VERSION} /tmp/m2 --no-install --no-interaction --no-progress
       - name: Setup local composer package
         env:
             COMPOSER_NAME: ${{ secrets.COMPOSER_NAME }}
@@ -45,16 +45,16 @@ jobs:
             test -z "$MAGENTO_VERSION" && exit 1
             cd /tmp/m2
             ln -s ${GITHUB_WORKSPACE} local-source
-            composer config preferred-install source
-            composer config minimum-stability dev
-            composer config repositories.remote-source vcs git@github.com:${COMPOSER_NAME}.git
-            composer config repositories.local-source path local-source/
+            composer2 config preferred-install source
+            composer2 config minimum-stability dev
+            composer2 config repositories.remote-source vcs git@github.com:${COMPOSER_NAME}.git
+            composer2 config repositories.local-source path local-source/
             echo "Installing ${COMPOSER_NAME}:dev-${BRANCH}"
-            composer require ${COMPOSER_NAME}:dev-${BRANCH} --no-update --no-interaction
+            composer2 require ${COMPOSER_NAME}:dev-${BRANCH} --no-update --no-interaction
       - name: Composer installation
         run: |
             cd /tmp/m2
-            COMPOSER_MEMORY_LIMIT=-1 composer install --prefer-source --no-interaction --no-progress --no-suggest --no-dev
+            COMPOSER_MEMORY_LIMIT=-1 composer2 install --prefer-source --no-interaction --no-progress --no-suggest --no-dev
       - name: Magento installation
         run: |
             cd /tmp/m2
